--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <title>Finance</title>
 </head>
 
@@ -13,22 +20,21 @@
         <h1 id="logo">dev.finance$</h1>
     </header>
 
-    <main>
-
+    <main class="container">
         <section id="balance">
             <h2>Balanço</h2>
 
-            <div>
+            <div class="card">
                 <h3>Entradas</h3>
                 <p>R$ 5.000,00</p>
             </div>
 
-            <div>
+            <div class="card">
                 <h3>Saídas</h3>
                 <p>R$ 2.000,00</p>
             </div>
 
-            <div>
+            <div class="card total">
                 <h3>Total</h3>
                 <p>R$ 3.000,00</p>
             </div>
@@ -46,19 +52,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Luz</td>
-                        <td>- R$ 500,00</td>
-                        <td>23/01/2021</td>
+                        <td class="description">Luz</td>
+                        <td class="expense">- R$ 500,00</td>
+                        <td class="date">23/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Criação Web Site</td>
-                        <td>R$ 5.000,00</td>
-                        <td>23/01/2021</td>
+                        <td class="description">Criação Web Site</td>
+                        <td class="income">R$ 5.000,00</td>
+                        <td class="date">23/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Internet</td>
-                        <td>- R$ 200,00</td>
-                        <td>23/01/2021</td>
+                        <td class="description">Internet</td>
+                        <td class="expense">- R$ 200,00</td>
+                        <td class="date">23/01/2021</td>
                     </tr>
                 </tbody>
             </table>
