--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="Imagens de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -39,7 +39,7 @@
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="Imagens de saída">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
@@ -47,7 +47,7 @@
                     <span>Total</span>
                     <img src="./assets/total.svg" alt="Imagens total">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
         </section>
         <section id="transaction">
@@ -65,30 +65,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação Web Site</td>
-                        <td class="income">R$ 5.000,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </section>
@@ -128,15 +104,8 @@
         <div>2021 - dev.finance$</div>
     </footer>
 
-    <script>
-        const Modal = {
-            open() {
-                document.querySelector('.modal-overlay').classList.add('active')
-            },
-            close() {
-                document.querySelector('.modal-overlay').classList.remove('active')
-            }
-        }
+    <script src="./scripts.js">
+
     </script>
 </body>
 
