--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <th>Valor</th>
                         <th>Data</th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -104,9 +105,8 @@
         <div>2021 - dev.finance$</div>
     </footer>
 
-    <script src="./scripts.js">
-
-    </script>
+    <script src="./scripts.js"></script>
+    <script src="https://kit.fontawesome.com/1fb46fe701.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
