--- a/index.html
+++ b/index.html
@@ -78,20 +78,23 @@
                 <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
-                        <input type="text" id="description" name="description" placeholder="Descrição" />
+                        <input type="text" id="description" name="description" placeholder="Descrição"
+                            id="description" />
                     </div>
 
                     <div class="input-group">
                         <label class="sr-only" for="amount">Valor</label>
-                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" id="amount" />
                         <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas
                             decimais</small>
                     </div>
 
                     <div class="input-group">
                         <label class="sr-only" for="date">Data</label>
-                        <input type="date" id="date" name="date" />
+                        <input type="date" id="date" name="date" id="date" />
                     </div>
+
+                    <input class="sr-only" type="text" name="edit" id="edit" />
 
                     <div class="input-group actions">
                         <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
