--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
 
             <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
-            <table id="data-table">
+            <table id="data-table" style="width:100%">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
-                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
